# obuv-demo-ex

./: .env.example  .gitignore  Justfile  LICENSE  README.md  alembic.ini  desktop.spec  pyproject.toml
.github/workflows/: desktop-exe.yml  lint.yml
alembic/: env.py
alembic/versions/: 0000_2026_05_11_21_34_41_initial.py  0000_2026_05_13_10_06_06_initial.py
resources/import/: README.md  demo_products.csv
src/: __main__.py  app_factory.py  desktop.py  main_app.py
src/core/: config.py  logger.py  paths.py
src/handlers/: __init__.py
src/handlers/api/: __init__.py
src/handlers/api/v1/: __init__.py
src/handlers/api/v1/auth/: __init__.py  handler.py
src/handlers/api/v1/order/: __init__.py  handler.py
src/handlers/api/v1/product/: __init__.py  handler.py
src/handlers/api/v1/user/: __init__.py  handler.py
src/handlers/dependencies/: get_current_user.py  get_optional_user.py  require_roles.py
src/handlers/public/index/: __init__.py  handler.py
src/middlewares/: __init__.py  logging_middleware.py
src/repository/: __init__.py
src/repository/base/: __init__.py  postgres.py  repository.py  session.py  translator.py
src/repository/base/models/: __init__.py  orm.py  postgres.py  pydantic.py
src/repository/order/: __init__.py  repository.py  translator.py
src/repository/order/models/: __init__.py  orm.py  postgres.py  pydantic.py  status.py
src/repository/product/: repository.py  translator.py
src/repository/product/models/: orm.py  postgres.py  pydantic.py
src/repository/user/: repository.py  translator.py
src/repository/user/models/: orm.py  postgres.py  pydantic.py  roles.py
src/services/order/: __init__.py  models.py  service.py
src/services/product/: models.py  service.py
src/services/security/: __init__.py  models.py  service.py
src/services/user/: models.py  service.py
src/utils/: db_connection.py  db_migrate.py  permissions.py  seed_admin.py
static/css/: app.css  tokens.css
static/js/: api.js  main.js  state.js
static/js/components/: Button.js  ConfirmDialog.js  IconButton.js  Modal.js  PaginationBar.js  Select.js  TextField.js
static/js/utils/: format.js  html.js  orderSortMenu.js  productSortMenu.js  roles.js  tableColumnResize.js  userSortMenu.js
static/js/views/: appShell.js  authView.js  ordersSection.js  productsSection.js  usersSection.js
templates/: index.html
